--- a/GraphicCalc/nbproject/project.properties
+++ b/GraphicCalc/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=graphiccalc.GraphicCalc
+main.class=graphiccalc.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
